# Separate C FFI crate that reuses the same source but compiles to pure C staticlib

[package]
name = "adblock-c-ffi"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
adblock = { version = "0.12.0", default-features = false, features = ["full-regex-handling", "debug-info", "css-validation"] }
serde_json = "1.0"

[lib]
name = "adblock_c_ffi"
crate-type = ["staticlib"]